<resources>
    <string name="app_name">DogPlay</string>
    <!--  kakao  -->
    <string name="kakao_app_key">732b0abea9df738fba19390d087643ca</string>

    <!-- mapPage -->
    <string name="searchHotelNearBy">현 지도에서 검색</string>

    <!-- hotelMain -->
    <string name="ownerHotelTitle">내 호텔</string>
    <string name="enrollHotel">호텔 추가하기</string>

    <!-- editRoom-->
    <string name="EditHotelRoom">객실 수정하기</string>
    <string name="EditHotelRoomName">객실 이름을 수정해주세요</string>
    <string name="EditHotelRoomPrice">객실의 가격을 수정해주세요</string>
    <string name="EditHotelRoomPriceDescription">가격을 수정해주세요</string>
    <string name="EditHotelRoomCount">객실의 개수를 수정주세요</string>
    <string name="EditHotelRoomCountDescription">e.g) 10 </string>
    <string name="EditHotelRoomMinKg">수용가능한 최소 몸무게를 수정해주세요(단위 kg)</string>
    <string name="EditHotelRoomMinKgDescription">e.g) 5 </string>
    <string name="EditHotelRoomMaxKg">수용가능한 최대 몸무게를 수정해주세요(단위 kg)</string>
    <string name="EditHotelRoomMaxKgDescription">e.g) 15 </string>
    <string name="EditHotelRoomInfoDescription">객실에 대한 간략한 소개를 수정해주세요</string>
    <string name="Edit">수정하기</string>

    <!-- editHotel   -->
    <string name="editHotel">호텔 정보 수정하기</string>
    <string name="editRoom">객실 정보 수정하기</string>
    <string name="edit">수정하기</string>
    <string name="EditHotelNameDescription">개놀자에 등록된 이름을 수정해주세요</string>
    <string name="EditHotelName">호텔 이름을 수정해주세요</string>
    <string name="EditHotelImgDescription">여기를 눌러서 사진을 수정해주세요</string>
    <string name="EditHotelAddress">주소를 수정해주세요</string>
    <string name="EditHotelAddressDescription">호텔의 주소를 수정해주세요</string>
    <string name="EditHotelContactDescription">대표 연락처를 수정해주세요</string>
    <string name="EditHotelContact">\'-\' 를 포함해서 수정해주세요</string>
    <string name="EditHotelBNDescription">호텔 사업자 등록 번호를 수정해주세요</string>
    <string name="EditHotelBN">\'-\' 를 포함해서 수정해주세요</string>
    <string name="EditHotelInfo">100자 ~ 200자 정도로 적어주시면 좋습니다</string>
    <string name="EditHotelInfoDescription">호텔에 대한 간략한 소개를 수정해주세요</string>
    <string name="EditHotelTagDescription">호텔을 대표할 태그를 수정해주세요</string>
    <string name="EditHotelDetailDescription">호텔 이용에 필요한 공지사항을 수정해주세요</string>

    <string name="ownerHotelEditTitle">내 호텔 수정하기</string>

    <!-- enrollHotel -->
    <string name="enrollHotelRoom">객실 추가하기</string>
    <string name="enroll">등록하기</string>
    <string name="EnrollHotelNameDescription">개놀자에 등록할 이름을 골라주세요</string>
    <string name="EnrollHotelName">호텔 이름을 입력해주세요</string>
    <string name="EnrollHotelImgDescription">여기를 눌러서 사진을 추가해주세요</string>
    <string name="plus">+</string>
    <string name="EnrollHotelAddress">주소를 검색해주세요</string>
    <string name="EnrollHotelAddressDetail">상세주소를 입력해주세요</string>
    <string name="EnrollHotelAddressDescription">호텔의 주소를 알려주세요</string>
    <string name="EnrollHotelContactDescription">대표 연락처를 알려주세요</string>
    <string name="EnrollHotelContact">\'-\' 를 포함해서 입력해주세요</string>
    <string name="EnrollHotelBNDescription">호텔 사업자 등록 번호를 알려주세요</string>
    <string name="EnrollHotelBN">\'-\' 를 포함해서 입력해주세요</string>
    <string name="EnrollHotelInfo">100자 ~ 200자 정도로 적어주시면 좋습니다</string>
    <string name="EnrollHotelInfoDescription">호텔에 대한 간략한 소개를 해주세요</string>
    <string name="EnrollHotelTagDescription">호텔을 대표할 태그를 골라주세요</string>
    <string name="EnrollHotelDetailDescription">호텔 이용에 필요한 공지사항을 알려주세요</string>
    <string name="OperatingTime">이용시간</string>
    <string name="OperatingTimeContent">9:00 ~ 18:00</string>
    <string name="forbidden">이용제한</string>
    <string name="forbiddenContent">전염성 질병이 있는 아이 등</string>
    <string name="enterTheTitle">제목을 입력해주세요</string>
    <string name="enterTheContent">내용을 입력해주세요</string>

    <!-- enrollHotelRoom -->
    <string name="EnrollHotelRoomName">객실 이름을 입력해주세요</string>
    <string name="EnrollHotelRoomPrice">객실의 가격을 알려주세요</string>
    <string name="EnrollHotelRoomPriceDescription">가격을 입력해주세요</string>
    <string name="EnrollHotelRoomCount">객실의 개수를 알려주세요</string>
    <string name="EnrollHotelRoomCountDescription">e.g) 10 </string>
    <string name="EnrollHotelRoomMinKg">수용가능한 최소 몸무게를 알려주세요(단위 kg)</string>
    <string name="EnrollHotelRoomMinKgDescription">e.g) 5 </string>
    <string name="EnrollHotelRoomMaxKg">수용가능한 최대 몸무게를 알려주세요(단위 kg)</string>
    <string name="EnrollHotelRoomMaxKgDescription">e.g) 15 </string>
    <string name="EnrollHotelRoomInfoDescription">객실에 대한 간략한 소개를 해주세요</string>

    <!-- profile -->
    <string name="userInfo">개인 정보</string>
    <string name="myDogs">내 반려동물</string>
    <string name="reviews">내 리뷰</string>
    <string name="notification">알림</string>
    <string name="enrollMyHotel">호텔 등록하기</string>
    <string name="changeToOwnerView">호텔 관리자 모드로 전환</string>
    <string name="changeToUserView">게스트 모드로 전환</string>
    <string name="logout">로그아웃</string>

    <!-- UserInfo -->
    <string name="userInfoTitle">개인 정보 수정</string>
    <string name="save">저장</string>
    <string name="name">닉네임</string>
    <string name="enterName">이름을 입력해주세요.</string>
    <string name="phone">연락처</string>
    <string name="enterPhone">연락처를 입력해주세요.</string>
    <string name="picture">프로필 사진</string>
    <string name="apply">적용하기</string>

    <!--  MyDog  -->
    <string name="myDogList">내 반려견</string>
    <string name="addMyDogInfo">내 반려견 등록</string>
    <string name="addMyDogEdit">내 반려견 수정</string>
    <string name="delete">삭제하기</string>
    <string name="species">견종</string>
    <string name="gender">성별</string>
    <string name="male">수컷</string>
    <string name="female">암컷</string>
    <string name="asexual">중성화</string>
    <string name="age">나이</string>
    <string name="enterAge">생년월일을 입력해주세요. (e.g: 2020–01–01)</string>
    <string name="size">몸무게</string>
    <string name="enterSize">반올림해서 입력해주세요. (e.g: 5.5kg -> 6kg)</string>
    <string name="precaution">주의사항</string>
    <string name="character">성격</string>
    <string name="characterContent">지치지 않고 노는 것을 좋아합니다.</string>
    <string name="habit">습관</string>
    <string name="habitContent">높은 곳에 자주 앉아있습니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
