<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.owner.OwnerEnrollHotel">

    <ScrollView
        android:id="@+id/scrvEnrollHotel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:paddingBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtEnrollHotelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/enrollHotel"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtEnrollHotelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/EnrollHotelNameDescription"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEnrollHotelTitle" />


            <EditText
                android:id="@+id/edtEnrollHotelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnrollHotelName"
                android:inputType="textPersonName"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEnrollHotelName" />

            <TextView
                android:id="@+id/btnEnrollHotelImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/EnrollHotelImgDescription"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEnrollHotelName" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpEnrollHotelImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEnrollHotelImg" >

            </androidx.viewpager2.widget.ViewPager2>

            <TextView
                android:id="@+id/txtEnrollHotelAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/EnrollHotelAddressDescription"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vpEnrollHotelImg" />

            <EditText
                android:id="@+id/edtEnrollHotelAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnrollHotelAddress"
                android:inputType="textPostalAddress"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEnrollHotelAddress" />

            <TextView
                android:id="@+id/txtEnrollHotelContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/EnrollHotelContactDescription"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEnrollHotelAddress" />

            <EditText
                android:id="@+id/edtEnrollHotelContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnrollHotelContact"
                android:inputType="phone"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEnrollHotelContact" />

            <TextView
                android:id="@+id/txtEnrollHotelBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/EnrollHotelBNDescription"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEnrollHotelContact" />

            <EditText
                android:id="@+id/edtEnrollBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnrollHotelBN"
                android:inputType="number"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEnrollHotelBN" />

            <TextView
                android:id="@+id/txtEnrollHotelInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/EnrollHotelInfoDescription"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEnrollBN" />

            <EditText
                android:id="@+id/edtEnrollInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnrollHotelInfo"
                android:inputType="text"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEnrollHotelInfo" />

            <TextView
                android:id="@+id/txtEnrollHotelDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/EnrollHotelDetailDescription"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEnrollInfo" />

            <EditText
                android:id="@+id/edtEnrollDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnrollHotelDetail"
                android:inputType="text"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEnrollHotelDetail" />

            <TextView
                android:id="@+id/txtEnrollHotelTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/EnrollHotelTagDescription"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEnrollDetail" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEnrollHotelTag" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/paytop"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#888888"
        app:layout_constraintTop_toBottomOf="@id/scrvEnrollHotel"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnrollHotelData"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/payment"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/enroll"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paytop" />

</androidx.constraintlayout.widget.ConstraintLayout>