<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.owner.OwnerEnrollHotel">

    <ScrollView
        android:id="@+id/scrvUserInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUserInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/userInfoTitle"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_foreground"
                tools:ignore="VectorDrawableCompat" />


            <TextView
                android:id="@+id/btnSaveUser"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="16dp"
                android:text="@string/save"
                android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/name"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/txtUserInfoTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


            <EditText
                android:id="@+id/edtEnterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enterName"
                android:inputType="textPersonName"
                android:paddingBottom="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txtName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/phone"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/edtEnterName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <EditText
                android:id="@+id/edtEnterPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnrollHotelContact"
                android:inputType="phone"
                android:paddingBottom="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txtPhone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/txtPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/picture"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/edtEnterPhone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPicture"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="1000dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPicture">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/dog" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@+id/cvPicture"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>